--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>first test cofe</title>
+    <title>first test code</title>
 </head>
 <body>
     <h1> writing the first parts of the code </h1>
+    <h2>Robert Motta</h2>
+    <hr>   <img width="200" src="https://previews.123rf.com/images/rikkyal/rikkyal1706/rikkyal170600063/80435509-silhouette-of-a-bearded-man-hipster-style-barber-shop-emblem-.jpg" alt="Virtual Likeness">
+    
 </body>
